# meclient

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  app.cpp  app.h  main.cpp
src/argument/: CMakeLists.txt  argument.cpp  argument.h
src/client/: CMakeLists.txt  client.cpp  client.h
src/integrate/: AI.cpp  AI.h  CMakeLists.txt  Engine.h  Robot.cpp  Robot.h  Weapon.h
src/message/: CMakeLists.txt  bullet.proto  engine.proto  message.proto  weapon.proto
src/proto/: CMakeLists.txt  battle.proto  bullet.proto  engine.proto  grpc_func.cmake  init.proto  location.proto  serivce.proto  weapon.proto
test/: CMakeLists.txt
test/argument_test/: CMakeLists.txt  argument_test.cpp
