CMAKE_MINIMUM_REQUIRED(VERSION 2.8.5)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

ADD_SUBDIRECTORY(argument)
ADD_SUBDIRECTORY(integrate)
ADD_SUBDIRECTORY(proto)

ADD_EXECUTABLE(meclient main.cpp app.h app.cpp)
TARGET_LINK_LIBRARIES(meclient argument integrate proto)